--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				type="text" 
 				name="new-task-input" 
 				id="new-task-input" 
-				placeholder="What do you have planned?" />
+				placeholder="Enter a new to-do item" />
 			<input 
 				type="submit"
 				id="new-task-submit" 
